--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="top-banner">
         <div class="container">
-            <div class="small-bold-text banner-text">🥳 New to Usability Hub: Open and Closed card sorting</div>
+            <div class="small-bold-text banner-text">New to Usability Hub</div>
         </div>
     </div>
 
